--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vizier-dashboard",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "pull request metrics dashboard",
   "main": "src/index.html",
   "directories": {
@@ -10,7 +10,8 @@
     "start": "npx http-server src",
     "test": "node --test --watch",
     "test:cover": "node --test --experimental-test-coverage",
-    "test:lcov": "node --test --experimental-test-coverage --test-reporter=lcov --test-reporter-destination=lcov.info"
+    "test:lcov": "node --test --experimental-test-coverage --test-reporter=lcov --test-reporter-destination=lcov.info",
+    "uncovered": "npx coverage-node ./src/**/*.test.mjs"
   },
   "repository": {
     "type": "git",
